--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         </ul>
     </footer>
 </div>
-<script src="//cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://lib.baomitu.com/jquery/3.2.1/jquery.slim.min.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
